<resources>
    <string name="app_name">乐米金融</string>
    <string name="ok">确定</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="home">首页</string>
    <string name="information">资讯</string>
    <string name="anchor_circle">米圈</string>
    <string name="arena">竞技场</string>
    <string name="mine">我的</string>
    <string name="already_load_all">已加载全部</string>
    <string name="comment_number">评论(%1$d)</string>
    <string name="comment_number_string">评论(%1$s)</string>
    <string name="no_comment">暂无评论~快来发表您的评论吧</string>
    <string name="share">分享</string>
    <string name="re_location">点击重新获取位置</string>
    <string name="phone_number">手机号</string>
    <string name="please_input_phone_number">手机号</string>
    <string name="auth_code">验证码</string>
    <string name="get_auth_code">获取验证码</string>
    <string name="login">登录</string>
    <string name="login_ing">登录中</string>
    <string name="resend_after_n_seconds">%1$ds</string>
    <string name="obtain_auth_code_continue">重新获取</string>
    <string name="register_and_agree">注册即同意</string>
    <string name="lemi_finance_user_protocol">《乐米金融用户协议》</string>
    <string name="confirm_agree">确认即同意</string>
    <string name="lemi_the_third_party_protocol">《乐米第三方授权协议》</string>
    <string name="auth_code_login">验证码登录</string>
    <string name="password_login">密码登录</string>
    <string name="wechat_login">使用微信登录</string>
    <string name="password">密码</string>
    <string name="new_password">新密码</string>
    <string name="old_password">旧密码</string>
    <string name="six_to_eighteen_password">6-18位新密码</string>
    <string name="register_free">免费注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="please_input_phone">请输入手机号</string>
    <string name="auth_code_had_sent_">验证码已发送至%1$s</string>
    <string name="reset_password_success">重设密码成功，请重新登录</string>
    <string name="login_success">登录成功</string>
    <string name="cancel_login">取消登录</string>
    <string name="cancel_bind">取消绑定</string>
    <string name="futures">期货</string>
    <string name="stock">股票</string>
    <string name="optional">自选</string>
    <string name="ranking">排行榜</string>
    <string name="ShangShen">沪深</string>
    <string name="all_day_news">7x24小时</string>
    <string name="focus_news">要闻</string>
    <string name="week_">星期%1$s</string>
    <string name="practice">股票训练</string>
    <string name="study_room">一日一题</string>
    <string name="add_option">添加自选</string>
    <string name="choose_optional">选择自选类型</string>
    <string name="stock_optional">股票自选</string>
    <string name="future_optional">期货自选</string>
    <string name="stock_optional_hint">股票名称/代码</string>
    <string name="future_optional_hint">期货名称/代码</string>
    <string name="future_foreign">国际期货</string>
    <string name="future_china">国内期货</string>
    <string name="name">名称</string>
    <string name="lastPrice">最新价格</string>
    <string name="rate">涨跌幅</string>
    <string name="quick_publish">快来发表你的观点吧!</string>
    <string name="choose_trade_type">选择交易类型</string>
    <string name="quick_trade">快速交易</string>
    <string name="strategy_buy_sell">策略买卖(暂未开放)</string>
    <string name="firm_offer_open_account">实盘开户(暂未开放)</string>
    <string name="crude_oil_future">期货投资宝</string>
    <string name="quick_trade_offer_by_company">快速交易由“深圳达捷鑫科技有限公司”提供</string>
    <string name="no_event_record">还没有大事发生!</string>
    <string name="event_title">大事件</string>
    <string name="today_open">今开</string>
    <string name="pre_close">昨收</string>
    <string name="highest">最高</string>
    <string name="lowest">最低</string>
    <string name="publish_point">发表观点</string>
    <string name="add_optional">加入自选</string>
    <string name="cancel_optional">取消自选</string>
    <string name="whether_to_cancel_optional">是否要取消自选</string>
    <string name="add_option_succeed">添加自选成功</string>
    <string name="delete_option_succeed">取消自选成功</string>
    <string name="trade">交易</string>
    <string name="trend_chart">分时图</string>
    <string name="day_k_line">日K</string>
    <string name="one_min_k">1分钟</string>
    <string name="three_min_k">3分钟</string>
    <string name="five_min_k">5分钟</string>
    <string name="fifteen_min_k">15分钟</string>
    <string name="thirty_min_k">30分钟</string>
    <string name="sixty_min_k">60分钟</string>
    <string name="week_k_line">周K</string>
    <string name="month_k_line">月K</string>
    <string name="there_is_no_more_data">没有更多数据了</string>
    <string name="introduce">简介</string>
    <string name="stock_news">新闻</string>
    <string name="rise_list">涨幅榜</string>
    <string name="fail_list">跌幅榜</string>
    <string name="stock_finance">财务</string>
    <string name="market_close">休市</string>
    <string name="market_trading">交易中</string>
    <string name="no_option">暂无自选股票</string>
    <string name="ask_5">卖5</string>
    <string name="ask_4">卖4</string>
    <string name="ask_3">卖3</string>
    <string name="ask_2">卖2</string>
    <string name="ask_1">卖1</string>
    <string name="bid_1">买1</string>
    <string name="bid_2">买2</string>
    <string name="bid_3">买3</string>
    <string name="bid_4">买4</string>
    <string name="bid_5">买5</string>
    <string name="attention">关注</string>
    <string name="setting">设置</string>
    <string name="news">消息</string>
    <string name="click_to_view">点击查看</string>
    <string name="about_us">关于我们</string>
    <string name="feedback">意见反馈</string>
    <string name="finance_evaluation">金融测评</string>
    <string name="finance_evaluation_hint">测测金融水平</string>
    <string name="wallet">钱包</string>
    <string name="integral_shop">积分商城</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_question_and_answer">我的问答</string>
    <string name="now_not_has_data">暂无数据</string>
    <string name="please_input_here">请在此输入......</string>
    <string name="you_dont_have_trade">你还没有交易过哦</string>
    <string name="now_not_has_feedback_data">暂无反馈消息</string>
    <string name="about_le_mi">关于乐米</string>
    <string name="action_product">功能介绍</string>
    <string name="user_protocol">用户协议</string>
    <string name="check_update">检测更新</string>
    <string name="company">浙江松柏信息技术有限公司 \nCopyright@%1$d</string>
    <string name="service">客服      ( 点击复制 )</string>
    <string name="qq">QQ:%1$s</string>
    <string name="we_chat_">微信:%1$s</string>
    <string name="copy_success">复制成功</string>
    <string name="install_qq_first">请先安装QQ</string>
    <string name="my_ingot_">我的米粒: %1$d</string>
    <string name="wait_me_answer">等我答</string>
    <string name="my_subscribe">我的订阅</string>
    <string name="wait_answer">待回答</string>
    <string name="wait_answer_">待回答(%1$d)</string>
    <string name="wait_race_answer">待抢答</string>
    <string name="wait_race_answer_">待抢答(%1$d)</string>
    <string name="have_answered">已回答</string>
    <string name="have_answered_">已回答(%1$d)</string>
    <string name="you_not_has_answer">没有等待你回答的问题</string>
    <string name="not_has_answer">没有抢答的问题</string>
    <string name="you_not_has_answer_question">你还没回答问题</string>
    <string name="article">文章</string>
    <string name="miss_is_battle_answering">主播正在抢答中~</string>
    <string name="miss_is_answering">主播正在回答中~</string>
    <string name="question_replay_content_award"> %1$s人点赞  %2$s人评论 %3$s人打赏</string>
    <string name="question_replay_content">%1$s人评论</string>
    <string name="send_message_connect">您好, 感谢您使用我们的APP!
        \n如有意见或建议，请直接反馈，如需当面反馈，可留下联系方式
        \n客服微信：%1$s</string>
    <string name="modify_user_info">修改个人信息</string>
    <string name="head_image">头像</string>
    <string name="nick_name">昵称</string>
    <string name="sex">性别</string>
    <string name="age">年龄</string>
    <string name="location">地区</string>
    <string name="location_hint">定位到当前位置</string>
    <string name="location_choice">手动选择地区</string>
    <string name="choice_location">选择地区</string>
    <string name="credit">信用</string>
    <string name="logout">退出登录</string>
    <string name="modify_user_name">修改用户名</string>
    <string name="please_input_user_name">请输入用户名</string>
    <string name="save">保  存</string>
    <string name="is_only_a_chinese_name">姓名填写不正确</string>
    <string name="nick_name_hint">1-8个字符，可由中英文、数字组成</string>
    <string name="take_phone_from_camera">拍照</string>
    <string name="look_big_picture">查看大图</string>
    <string name="take_phone_from_phone">从手机相册选择</string>
    <string name="take_phone_cancel">取消</string>
    <string name="sd_is_not_useful">sd卡不可使用</string>
    <string name="real_name">姓名</string>
    <string name="identity_card_number">身份证</string>
    <string name="identity_card_phone">身份证照片</string>
    <string name="again_submit">重新提交</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="restart_get_location">点击重新获取位置</string>
    <string name="RMB">%1$S元</string>
    <string name="we_chat">微信</string>
    <string name="system">系统</string>
    <string name="system_">系统(%1$d)</string>
    <string name="reply_">回复(%1$d)</string>
    <string name="no_bind">未绑定</string>
    <string name="bind_phone">绑定手机号</string>
    <string name="bind_success">绑定成功</string>
    <string name="bind_wechat_info">绑定微信号,登录更便捷,是否绑定?</string>
    <string name="bind">绑定</string>
    <string name="trade_category">交易品种</string>
    <string name="american_gold">美黄金</string>
    <string name="trade_code">交易代码</string>
    <string name="trade_time">交易时间</string>
    <string name="trade_time_summer_winter">夏令 每周一~周五 上午06:00~次日04:58\n冬令 每周一~周五 上午07:00~次日05:58</string>
    <string name="holding_time">持仓时间</string>
    <string name="trade_unit">交易单位</string>
    <string name="unable_holding_overnight">不可持仓过夜,每日最后交易时间自动平仓</string>
    <string name="gram_per_hand">1000克/手</string>
    <string name="quote_unit">报价单位</string>
    <string name="yuan_per_gram">元/克</string>
    <string name="lowest_margin">最低保证金</string>
    <string name="contract_value_percent_four">合约价值的4%</string>
    <string name="trade_type">交易方式</string>
    <string name="free_offer_match_trade">自由报价、撮合成交</string>
    <string name="trade_system">交易制度</string>
    <string name="long_and_short_two_way_transaction">T+0 (多空双向交易)</string>
    <string name="delivery_time">交割时间</string>
    <string name="the_last_trading_day_after_5_consecutive_working_days">最后交易日后连续5个工作日</string>
    <string name="daily_price_maximum_volatility_limit">每日价格\n最大波动限制</string>
    <string name="not_more_than_the_last_trading_day_settlement_price_plus_minus_percent_three">不超过上已交易日结算价±3%</string>
    <string name="prediction_rule">预测规则</string>
    <string name="prediction_rule1">1.当前交易日开市后到下一个交易日开市前，预测下一个交易日的价格涨跌</string>
    <string name="prediction_rule2">2.价格涨跌以开盘价与收盘价对比，开盘价高于收盘价则价格跌，开盘价低于收盘价，则价格涨</string>
    <string name="prediction_rule3">3.每个预测时间段内预测一次后，将不能进行重复预测</string>
    <string name="prediction_rule4">4.预测成功率高的用户，将会登上我们的观点大神排行榜</string>
    <string name="other">其他</string>
    <string name="ranking_">排名</string>
    <string name="profit">盈利</string>
    <string name="predict_award">预计奖品</string>
    <string name="arena_count">对战场次</string>
    <string name="stock_name_code">名称/代码</string>
    <string name="amount_price">数量/价格</string>
    <string name="business_fund">成交额</string>
    <string name="business_time">成交时间</string>
    <string name="type">类型</string>
    <string name="entrust_buy_confirm">委托买入确认</string>
    <string name="direction_x">方向：</string>
    <string name="stock_x">股票：</string>
    <string name="price_x">价格：</string>
    <string name="volume_x">数量：</string>
    <string name="fee_x">手续费：</string>
    <string name="total_value_x">总价：</string>
    <string name="ten_ingot">10米粒</string>
    <string name="one_hundred_ingot">100米粒</string>
    <string name="ten_hundred_ingot">1000米粒</string>
    <string name="one_tenth_yuan">0.1元</string>
    <string name="one_yuan">1元</string>
    <string name="ten_yuan">10元</string>
</resources>