<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:orientation="horizontal"
    android:padding="@dimen/common_padding">

    <TextView
        style="@style/StockOrderTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:text="@string/type"/>

    <TextView
        style="@style/StockOrderTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:text="@string/stock_name_code"/>

    <TextView
        android:id="@+id/lastAndCostPrice"
        style="@style/StockOrderTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:text="@string/amount_price"/>

    <TextView
        style="@style/StockOrderTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:text="@string/business_fund"/>

    <TextView
        style="@style/StockOrderTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/business_time"/>

</LinearLayout>