<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:textColor="#333"
        android:textSize="18sp"
        tools:text="@string/entrust_buy_confirm"/>

    <TextView
        android:id="@+id/direction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:layout_marginLeft="26dp"
        android:textColor="@color/luckyText"
        tools:text="@string/direction_x"/>

    <TextView
        android:id="@+id/stock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:layout_marginLeft="26dp"
        android:textColor="@color/luckyText"
        tools:text="@string/stock_x"/>

    <TextView
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:layout_marginLeft="26dp"
        android:textColor="@color/luckyText"
        tools:text="@string/price_x"/>

    <TextView
        android:id="@+id/volume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:layout_marginLeft="26dp"
        android:textColor="@color/luckyText"
        tools:text="@string/volume_x"/>

    <TextView
        android:id="@+id/fee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:layout_marginLeft="26dp"
        android:textColor="@color/luckyText"
        tools:text="@string/fee_x"/>

    <TextView
        android:id="@+id/totalValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:layout_marginLeft="26dp"
        android:text="@string/total_value_x"
        android:textColor="@color/luckyText"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/split"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/luckyText"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textSize="18sp"/>

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/split"/>

        <TextView
            android:id="@+id/confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/luckyText"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/confirm"
            android:textSize="18sp"/>
    </LinearLayout>
</LinearLayout>