<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/bg_arena_ranking_title"
              android:gravity="center_vertical"
              android:orientation="horizontal">

    <TextView
        android:paddingTop="@dimen/common_padding"
        android:paddingBottom="@dimen/common_padding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/common_padding"
        android:layout_marginRight="40dp"
        android:text="@string/ranking_"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/profit"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/arena_count"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/predict_award"/>
</LinearLayout>