<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greyLightAssist"
    android:orientation="vertical">

    <com.sbai.finance.view.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backFeature="true"
        app:titleText="@string/prediction_rule"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingLeft="13dp"
        android:paddingRight="13dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:lineSpacingExtra="5dp"
            android:text="@string/prediction_rule1"
            android:textColor="@color/blackAssist"
            android:textSize="13sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:lineSpacingExtra="5dp"
            android:text="@string/prediction_rule2"
            android:textColor="@color/blackAssist"
            android:textSize="13sp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:lineSpacingExtra="5dp"
            android:text="@string/prediction_rule3"
            android:textColor="@color/blackAssist"
            android:textSize="13sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="25dp"
            android:lineSpacingExtra="5dp"
            android:text="@string/prediction_rule4"
            android:textColor="@color/blackAssist"
            android:textSize="13sp"/>
    </LinearLayout>
</LinearLayout>
