<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="44dp"
              android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/firstRewardLL"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginRight="2dp"
        android:layout_weight="1"
        android:background="@drawable/btn_reward_money"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            style="@style/RewardIngot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ten_ingot"/>

        <TextView
            style="@style/RewardMoney"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/one_tenth_yuan"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondRewardLL"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginRight="2dp"
        android:layout_weight="1"
        android:background="@drawable/btn_reward_money"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            style="@style/RewardIngot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/one_hundred_ingot"/>

        <TextView
            style="@style/RewardMoney"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/one_yuan"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/thirdRewardLL"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginRight="2dp"
        android:layout_weight="1"
        android:background="@drawable/btn_reward_money"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            style="@style/RewardIngot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ten_hundred_ingot"/>

        <TextView
            style="@style/RewardMoney"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ten_yuan"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/otherRewardLL"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/btn_reward_money"
        android:gravity="center"
        android:orientation="vertical">

        <com.sbai.finance.view.autofit.AutofitTextView
            android:maxLines="1"
            android:id="@+id/otherIngotNumber"
            style="@style/RewardIngot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/other"/>

        <TextView
            android:id="@+id/otherMoneyContent"
            style="@style/RewardMoney"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>
    </LinearLayout>

</LinearLayout>